front end update

--- a/dev/templates/graph_frame.html
+++ b/dev/templates/graph_frame.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<head>
-    <meta http-equiv="refresh" content="1">
-</head>
 
-<p>I am graph an this is {{ input }}</p>
+<body>
+<img id="graph_image" src="{{url_for('static', filename='graph.png')}}?t={{time}}" alt="graph_lineage">
+
+</body>
