--- a/dev/templates/sql_editor_frame.html
+++ b/dev/templates/sql_editor_frame.html
@@ -5,7 +5,8 @@
 </head>
 <body>
 
-    <label for="text">SQL</label>
+    <label for="text" id="label">SQL</label>
+    <div id="_error_message_container_"></div>
     <br>
     <textarea id="text" name="text" rows="12" cols="50">{{text}}</textarea>
     <br/>
@@ -16,17 +17,31 @@
 </body>
 <script language = "javascript" type = "text/javascript">
     function reloadFrame(){
+        const error_message_el_id="_error_message_";
+        const error_message_container="_error_message_container_";
         console.log("starting to reload");
         const request = new XMLHttpRequest();
         request.open('POST', '/graph_frame',true);
         request.setRequestHeader('Content-type', 'text/html');
-                request.onload = () => {
-                    const response = request.responseText;
-                    var elem=parent.document.getElementById("graph_editor");
-                    elem.contentWindow.document.getElementById("graph_image").src="/static/graph.png?t="+new Date().getTime();
-                }; 
+        var er_container=document.getElementById(error_message_container);
+            request.onload = () => {
+                console.log("status is "+request.status);
+                var el = document.getElementById(error_message_el_id);
+                if (el!=null){el.remove();};
+                if (request.status==500){
+                    var par=document.createElement("P");
+                    par.innerHTML=request.responseText;
+                    par.id=error_message_el_id;
+                    par.style.color="red";
+                    er_container.appendChild(par);
+                    console.log("created paragraph with text "+request.responseText);
+                };
+                var elem=parent.document.getElementById("graph_editor");
+                elem.contentWindow.document.getElementById("graph_image").src="/static/graph.png?t="+new Date().getTime();
+            }; 
         
         request.send(document.getElementById("text").value);
+        
         console.log("sent post method");
     }
 </script>
